# outline-skills

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.cursor/rules/: outline-skills.mdc
.github/workflows/: build-and-publish-pypi.yml
agents/: openai.yaml
outline_cli/: __init__.py  cli.py  client.py  comment_utils.py  config.py  exceptions.py
skills/outline-skills/: SKILL.md
tests/: test_cli.py  test_comments.py  test_config.py
